# php-rust

./: .gitignore  CLAUDE.md  COVERAGE.md  EXPERIMENT_PLAN.md  README.md  improvements_codex.md  italiano.md  mysqli_execution_plan_for_claude.md  php-8.5.7.code-workspace  robustness_improvements_codex.md
diary/: 00-reconnaissance.md  01-semantic-model.md  02-mapping-table.md  03-translation-log.md  04-divergences.md  NEXT-backlog-scan.md  NEXT-datetime-macro-step.md  NEXT-generators.md  NEXT-mbstring.md  NEXT-procedural-date-api.md  analysis_results.md  external-review-2026-06-16.md  metrics.md
php-rust/: .gitignore  2026-07-22_gemini.md  2026-07-22_gemini_wp38.md  20260716-gemini-feedback.md  20260721-gemini.md  20260723_gemini.md  20260723_gemini_post_wp41.md  20260723_gemini_post_wp42.md  20260723_gemini_rust_constraints.md  20270615-gemini.md  ASYNC_AND_DISTRIBUTION_ROADMAP.md  CLAUDE.md  COVERAGE.md  Cargo.toml  EXTENSIONS_ARCHITECTURE.md  FOOTPRINT_CPU_ROADMAP.md  FilePutContentsVar1.tmp  HK-RECON-PLAN.md  NEXT_SESSION.md  NEXT_SESSION_HTTP_KERNEL.md  NEXT_SESSION_SYMFONY.md  NEXT_SESSION_WORDPRESS.md  PHPR_DIVERGENCES_FROM_PHP.md  README.md  REGISTER_BYTECODE_PLAN.md  TODO.md  VISION_AND_ROADMAP.md  analysis_and_suggestions.md  analysis_and_suggestions_v2.md  analysis_and_suggestions_v3.md  analysis_and_suggestions_v4.md  analysis_and_suggestions_v5.md  bug61546_sub.php  php-8.5.7.code-workspace  refactor_plan_claude_review_2026.md  refactor_plan_for_claude_2026.md  refactor_plan_prelude_claude.md  vm_refactor_plan.md
php-rust/.cargo/: config.toml
php-rust/.claude/skills/gh-status-sync/: SKILL.md
php-rust/.github/workflows/: ci.yml
php-rust/crates/php-builtins/: Cargo.toml
php-rust/crates/php-builtins/src/: array.rs  bcmath.rs  crypto.rs  csv.rs  ctype.rs  curl.rs  date.rs  dateparse.rs  encoding.rs  env.rs  exif.rs  file.rs  fileinfo.rs  format.rs  gmp.rs  grapheme.rs  html.rs  idn.rs  image.rs  json.rs  lib.rs  math.rs  mbstring.rs  net.rs  openssl.rs  pack.rs  serialize.rs  string.rs  url.rs  var.rs  zlib.rs
php-rust/crates/php-builtins/tests/: builtins.rs  differential.rs  vm_builtins.rs
php-rust/crates/php-cli/: Cargo.toml
php-rust/crates/php-cli/src/: main.rs  mime.rs  server.rs
php-rust/crates/php-runtime/: Cargo.toml
php-rust/crates/php-runtime/src/: builtin.rs  bytecode.rs  coerce.rs  compile.rs  eval.rs  hir.rs  json.rs  lib.rs  logging.rs  lower.rs  mbregex.rs  php-8.5.7.code-workspace  preg.rs  scanf.rs  unserialize.rs  vm.rs
php-rust/crates/php-runtime/src/compile/: assign.rs  class.rs  expr.rs  func.rs  mod.rs  reg_lower.rs
php-rust/crates/php-runtime/src/eval/: builtins.rs  calls.rs  class.rs  expr.rs  mod.rs  stmt.rs
php-rust/crates/php-runtime/src/lower/: class.rs  curl_consts.rs  expr.rs  mod.rs  prelude.php  prelude_bcmath.php  prelude_fileinfo.php  prelude_gd.php  prelude_gmp.php  prelude_mysqli.php  prelude_ns.php  stmt.rs
php-rust/crates/php-runtime/src/lower/prelude/: core.php  date.php  dom.php  pdo.php  reflection.php  session.php  spl.php  sqlite3.php  tidy.php
php-rust/crates/php-runtime/src/vm/: arrays.rs  calls.rs  census.rs  coroutines.rs  dom.rs  exceptions.rs  gc_census.rs  gd.rs  host.rs  host_reflect.rs  ini.rs  mod.rs  mysqli.rs  oop.rs  pdo.rs  run.rs  session.rs  tidy.rs  tokenizer.rs  websapi.rs  xmlparser.rs  xslt.rs
php-rust/crates/php-runtime/tests/: differential.rs  eval.rs  lowering.rs
php-rust/crates/php-server/: Cargo.toml
php-rust/crates/php-server/src/: main.rs
php-rust/crates/php-types/: Cargo.toml  build.rs
php-rust/crates/php-types/src/: array.rs  big5.rs  convert.rs  diag.rs  dtoa.rs  fsown.rs  gdio.rs  generator.rs  html4.rs  lib.rs  memcensus.rs  netio.rs  numstr.rs  object.rs  ops.rs  sapi.rs  stream.rs  tidyio.rs  tz.rs  xsltio.rs  zlibio.rs  zstr.rs  zval.rs
php-rust/crates/php-types/tests/: differential.rs  gdio_smoke.rs
php-rust/crates/phpt-runner/: Cargo.toml
php-rust/crates/phpt-runner/src/: lib.rs  main.rs
php-rust/crates/phpt-runner/tests/: isolation.rs  runner.rs
php-rust/crates/phpt-runner/tests/fixtures/: pass_exact.phpt  pass_expectf.phpt  skip_section.phpt  skip_unsupported.phpt
php-rust/gaps/: REPORT_GAP_40.md  REPORT_GAP_41.md  REPORT_GAP_42.md  REPORT_GAP_43.md  REPORT_GAP_44.md  REPORT_GAP_45.md  REPORT_GAP_46.md
php-rust/migration/: RULEBOOK.md
php-rust/public/: index.php  my-test001.php  pippo.php
php-rust/scripts/: clean-appledouble.sh  measure-coverage.sh
php-rust/sessions/: WP47_DECISION_TABLE.md  WP_SESSION_28.md  WP_SESSION_29.md  WP_SESSION_30.md  WP_SESSION_31.md  WP_SESSION_32.md  WP_SESSION_33.md  WP_SESSION_34.md  WP_SESSION_35.md  WP_SESSION_36.md  WP_SESSION_37.md  WP_SESSION_38.md  WP_SESSION_39.md  WP_SESSION_40.md  WP_SESSION_41.md  WP_SESSION_42.md  WP_SESSION_43.md  WP_SESSION_44.md  WP_SESSION_45.md  WP_SESSION_46.md  WP_SESSION_47.md
