[workspace]
resolver = "2"
members = [
    "crates/php-types",
    "crates/php-runtime",
    "crates/php-builtins",
    "crates/php-cli",
    "crates/phpt-runner",
    "crates/php-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["php-rust-experiment"]

[workspace.dependencies]
php-types = { path = "crates/php-types" }
php-runtime = { path = "crates/php-runtime" }
php-builtins = { path = "crates/php-builtins" }
# Developer logging: the `log` facade is used across the runtime; `log4rs` is the
# configurable backend installed by the binaries (see `php_runtime::logging`).
log = "0.4"
log4rs = "1.3"
