[workspace]
resolver = "2"
members = [
    "crates/php-types",
    "crates/php-runtime",
    "crates/php-builtins",
    "crates/php-cli",
    "crates/phpt-runner",
    "crates/php-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["php-rust-experiment"]

[workspace.dependencies]
php-types = { path = "crates/php-types" }
php-runtime = { path = "crates/php-runtime" }
php-builtins = { path = "crates/php-builtins" }
# Developer logging: the `log` facade is used across the runtime; `log4rs` is the
# configurable backend installed by the binaries (see `php_runtime::logging`).
log = "0.4"
log4rs = "1.3"
# Global allocator for the binaries (phpr / phpt-runner): the per-request
# workload is allocation-bound (Zval/PhpArray churn), where mimalloc's
# free-list sharding recovers most of what Zend's bin/chunk ZMM buys PHP.
mimalloc = "0.1"
# Non-DoS-hardened hasher for the engine's internal maps (PhpArray index,
# class/function/constant tables): stands in for Zend's precomputed
# zend_string hashes. NOT used by Vm::unit_fp (own DefaultHasher).
rustc-hash = "2"
