[package]
name = "php-builtins"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
php-types.workspace = true
php-runtime.workspace = true
time = "0.3.49"
encoding_rs = "0.8.35"
libc = "0.2"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
crc32fast = "1.4"
pwhash = "1"
x509-parser = "0.18"
