[package]
name = "php-builtins"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
getrandom = "0.2"
hostname = "0.4"
php-types.workspace = true
php-runtime.workspace = true
time = "0.3.49"
memchr = "2"
encoding_rs = "0.8.35"
unicode-segmentation = "1.13"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
libc = "0.2"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
crc32fast = "1.4"
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64", "xxh3"] }
pwhash = "1"
x509-parser = "0.18"
ureq = { version = "3", default-features = false, features = ["rustls"] }
