[package]
name = "php-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "phpr"
path = "src/main.rs"

[dependencies]
php-types.workspace = true
php-runtime.workspace = true
php-builtins.workspace = true
log.workspace = true
libc = "0.2"
mimalloc.workspace = true
