[package]
name = "php-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "phpr"
path = "src/main.rs"

[features]
# WP-45 Fase 0: byte-attribution build (PHPR_MEM_CENSUS). Instrumentation
# builds only — never parity/A-B binaries. See FOOTPRINT_CPU_ROADMAP.md.
mem-census = ["php-runtime/mem-census", "php-types/mem-census"]

[dependencies]
php-types.workspace = true
php-runtime.workspace = true
php-builtins.workspace = true
log.workspace = true
libc = "0.2"
mimalloc.workspace = true
