[package]
name = "php-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
php-types.workspace = true
mago-syntax = "1.30"
mago-database = "1.30"
mago-span = "1.30"
bumpalo = "3"
regex = "1"
fancy-regex = "0.14"
# Stackful coroutines for generators (step 39, D-GEN-1). `Coroutine` requires
# only `'static` (not `Send`), satisfied by owning the generator body as an
# `Rc<FnDecl>` and reborrowing a lifetime-erased evaluator pointer.
corosensei = "0.3"
onig = "6.5.3"
