[package]
name = "php-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
php-types.workspace = true
log.workspace = true
log4rs.workspace = true
mago-syntax = "1.30"
mago-database = "1.30"
mago-span = "1.30"
bumpalo = "3"
regex = "1"
fancy-regex = "0.14"
onig = "6.5.3"
getrandom = "0.2"
