[package]
name = "php-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# WP-33 T0: compile in the op-census hook (PHPR_OP_CENSUS). Off by default:
# even a dead bool-branch per dispatch tick costs ~3% on op-dense workloads,
# so the census exists only in dedicated instrumentation builds.
op-census = []
# WP-39 leva E: GC-pipeline counters (PHPR_GC_CENSUS). Same convention as
# op-census: only ever compiled into dedicated instrumentation builds.
gc-census = []
# WP-45 Fase 0: byte-attribution census (PHPR_MEM_CENSUS) — see
# FOOTPRINT_CPU_ROADMAP.md. Instrumentation builds only.
mem-census = ["php-types/mem-census"]

[dependencies]
php-types.workspace = true
rustc-hash.workspace = true
log.workspace = true
log4rs.workspace = true
mago-syntax = "1.30"
mago-syntax-core = "1.30"
mago-database = "1.30"
mago-span = "1.30"
bumpalo = "3"
regex = "1"
fancy-regex = "0.14"
onig = "6.5.3"
getrandom = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.41"
unicode-segmentation = "1.13"
libc = "0.2"
rusqlite = { version = "0.40.1", features = ["bundled", "column_decltype", "column_metadata", "functions"] }
mysql = "28.0.0"
