[package]
name = "php-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# WP-37 attribution build (SSO groundwork): length-bucket counters on every
# PhpStr allocation, dumped at process exit to $PHPR_STR_CENSUS (append).
# Off by default — zero cost in normal builds (the hook is compiled out).
str-census = []
# WP-45 Fase 0 (FOOTPRINT_CPU_ROADMAP.md): byte-attribution per canale
# (str/arr/obj/unit), dump su $PHPR_MEM_CENSUS. Misura-only, mai nei build
# di parità o A/B.
mem-census = []

[dependencies]
libc = "0.2"
rustc-hash.workspace = true
# System zlib for ext/zlib (see src/zlibio.rs): shared by the value builtins
# (gzcompress & co.) and the VM's gz stream handling, so the FFI lives once in
# the bottom crate. Byte-identical to PHP requires the system libz + PHP's exact
# deflate params — see zlibio.rs.
libz-sys = "1"
